feat: reassembling java knowledge